[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-portfolio-analysis-tool"
version = "0.1.0"
description = "A Streamlit-based dashboard for real-time stock market analysis"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"} 
